# CAPtoIJC

./: CMakeLists.txt  LICENSE  README
cmake_modules/: FindGLOBALPLATFORM.cmake
src/: CAPtoIJC.cpp  CAPtoIJC.h  CMakeLists.txt  stdafx.h
