PROJECT(CAPtoIJC C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET( ${PROJECT_NAME}_MAJOR 1 )
SET( ${PROJECT_NAME}_MINOR 1 )
SET( ${PROJECT_NAME}_BUILD 0 )
SET(VERSION "${${CMAKE_PROJECT_NAME}_MAJOR}.${${CMAKE_PROJECT_NAME}_MINOR}.${${CMAKE_PROJECT_NAME}_BUILD}")

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules/)

IF(UNIX)
  set(DOCUMENTATION_DIRECTORY "share/doc/${PROJECT_NAME}")
ELSE(UNIX)
  set(DOCUMENTATION_DIRECTORY "doc")
ENDIF(UNIX)

# check for GCC that supports C++ 11 flag
IF(CMAKE_COMPILER_IS_GNUCXX)
  include(CheckCXXCompilerFlag)
  CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
  if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
  else()
    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
  endif()
ENDIF()

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/COPYING
              ${CMAKE_CURRENT_SOURCE_DIR}/COPYING.LESSER
              ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE
              ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.GlobalPlatform
              ${CMAKE_CURRENT_SOURCE_DIR}/README
              DESTINATION ${DOCUMENTATION_DIRECTORY})

ADD_SUBDIRECTORY(src)
